--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: ruby
-before_install:
-  - gem update --system
-  - gem install bundler
+#before_install:
+ # - gem update --system
+ # - gem install bundler
 rvm:
-  - 2.3
+  #- 2.3
   - 2.6
 script:
   - bundle exec ruby test/acronym_test.rb
