--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ language: ruby
   #global:
   #CC_TEST_REPORTER_ID=1a329d3252cc729376937fb3b4922c017f1e9e27e45a1c1cd456182525d2a0fa
 
-before_install:
-  - gem update --system
-  - gem install bundler
+#before_install:
+#  - gem update --system
+#  - gem install bundler
  # - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
  # - chmod +x ./cc-test-reporter
 
