--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
 language: ruby
 
-#env:
-  #global:
-  #CC_TEST_REPORTER_ID=1a329d3252cc729376937fb3b4922c017f1e9e27e45a1c1cd456182525d2a0fa
+env:
+  global:
+  CC_TEST_REPORTER_ID=1a329d3252cc729376937fb3b4922c017f1e9e27e45a1c1cd456182525d2a0fa
 
 #before_install:
 #  - gem update --system
 #  - gem install bundler
- # - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
- # - chmod +x ./cc-test-reporter
+
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 
 rvm:
  # - 2.3
@@ -35,8 +38,6 @@ script:
   - bundle exec ruby test/two_fer_test.rb
   - bundle exec rspec
 
-#after_script:
- # - ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.backend.json coverage/backend/.resultset.json
- # - ./cc-test-reporter format-coverage -t lcov -o coverage/codeclimate.frontend.json coverage/frontend/lcov.info 
- # - ./cc-test-reporter sum-coverage coverage/codeclimate.*.json -p 2                 
+after_script:            
  # - if [[ "$TRAVIS_TEST_RESULT" == 0 ]]; then ./cc-test-reporter upload-coverage; fi 
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULTpsankowski@linux-p110-12:~/ruby-tests
