--- a/.travis.yml
+++ b/.travis.yml
@@ -4,24 +4,18 @@ env:
    
 language: ruby
 
-#before_install:
-#  - gem update --system
-#  - gem install bundler
-
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 
 rvm:
- # - 2.3
   - 2.5.7
   - 2.6.3
 
 script:
   - bundle exec rake spec
-  - bundle exec rspec
+  - bundle exec rake minitest
 
 after_script:            
- # - if [[ "$TRAVIS_TEST_RESULT" == 0 ]]; then ./cc-test-reporter upload-coverage; fi 
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
